--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -43,6 +43,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  font: caption;
 }
 
 /* A elements that don't have a class get default styles */
